# ecommerce

./: README.md  pyproject.toml
src/core/settings/: base.py
